The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

* Check for bullseye security repository
* Checks for new minifirewall configuration

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [21.07] 2021-07-07

### Added

* Preliminary Debian 11 « Bullseye » support

### Fixed

* IS_HARDWARERAIDTOOL: match more RAID PCI cards

### Security

## [20.12] 2021-01-18

### Fixed

* IS_EVOLIX_USER: Match on if account name begin by evolix, don't match account name testevolix for example

## [20.12] 2020-04-28

### Added

* support multiple values for SQL_BACKUP_PATH and POSTGRES_BACKUP_PATH

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT: exclude disabled backup scripts
* IS_DUPLICATE_FS_LABEL: disable blkid cache
* IS_POSTGRES_BACKUP: look for compressed backup too
* IS_VARTMPFS: use findmnt if available

### Removed

* Remove unused PROGDIR variable

## [20.04.4] 2020-04-28

### Added

* IS_NGINX_LETSENCRYPT_UPTODATE: verify that the letsencrypt snippet is compatible with the current version of Nginx

## [20.04.3] 2020-04-24

### Fixed

* IS_EVOBACKUP_INCS: also look for the new command

## [20.04.2] 2020-04-15

### Added

* IS_CHROOTED_BINARY_NOT_UPTODATE: verify that chrooted processes run up-to-date binaries

## [20.04.1] 2020-04-12

### Added

* IS_EVOBACKUP_EXCLUDE_MOUNT : verify that mount points are excluded in evobackup scripts

## [20.02.1] - 2020-02-27

### Changed

* IS_EVOLINUXSUDOGROUP : improve sudoer directive detection

## [19.11.2] - 2019-11-07

### Changed

* IS_EVOMAINTENANCE_FW : warn only if HOOK_DB is enabled
* IS_BACKUPUPTODATE : check backup dates in the correct directory

## [19.11.1] - 2019-11-06

### Fixed

* IS_TMPUSRRO : improve grep for options detection
* IS_TMPNOEXEC : fix grep for options detection

## [19.11] - 2019-11-05

### Changed
