@@ -7,6 +7,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 * Check for bullseye security repository
 * Checks for new minifirewall configuration
+* Improve MySQL utils configuration checks
 
 ### Changed
 
